--- a/html/index.html
+++ b/html/index.html
@@ -12,7 +12,7 @@
             <div class="col-12">
                 <div class="card">
                     <div class="card-body">
-                        <h1>O yfc</h1>
+                        <h1>О нас</h1>
                     </div>
                 </div>
             </div>
